@startuml

title __AMCWardPanels.TableFrames.Transfer Package Diagram__\n


    namespace AMCWardPanels {
      namespace TableFrames {
        namespace Transfer {
          class AMCWardPanels.TableFrames.Transfer.TransTable {
              + TransTable()
          }
        }
      }
    }

  


    namespace AMCWardPanels {
      namespace TableFrames {
        namespace Transfer {
          class AMCWardPanels.TableFrames.Transfer.TransTableModel {
              + TransTableModel()
              + TransTableModel()
              + isCellEditable()
          }
        }
      }
    }

  


    namespace AMCWardPanels {
      namespace TableFrames {
        namespace Transfer {
          class AMCWardPanels.TableFrames.Transfer.TransTablePanel {
              - columnName : String[]
              - dbData : Object[][]
              - scrollPane : JScrollPane
              - table : JTable
              + TransTablePanel()
              + setupTable()
              + tableChanged()
              - editPatient()
          }
        }
      }
    }

  

  AMCWardPanels.TableFrames.Transfer.TransTableModel -up-|> AMCWardPanels.TableFrames.MyTableModel
  AMCWardPanels.TableFrames.Transfer.TransTablePanel .up.|> javax.swing.event.TableModelListener
  AMCWardPanels.TableFrames.Transfer.TransTablePanel -up-|> javax.swing.JPanel
  AMCWardPanels.TableFrames.Transfer.TransTablePanel o-- Methods.AMCWard
  AMCWardPanels.TableFrames.Transfer.TransTablePanel o-- AMCWardPanels.TableFrames.Transfer.TransTableModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
